--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 name = root
-password = 12345
-url = jdbc:mysql://localhost:3306/outpatient
+password = Wxw2018117
+url = jdbc:mysql://wxw2018117.mysql.rds.aliyuncs.com:3306/outpatient
 driverClass = com.mysql.jdbc.Driver
 
 initPoolSize = 5
