--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 name = root
 password = Wxw2018117
 url = jdbc:mysql://wxw2018117.mysql.rds.aliyuncs.com:3306/outpatient
-driverClass = com.mysql.jdbc.Driver
+driver=com.mysql.jdbc.Driver
 
 initPoolSize = 5
 maxPoolSize = 20
