--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,13 +8,29 @@
   <!--加载Spring-->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:applicationContext.xml</param-value>
+    <param-value>classpath:applicationContext-*.xml</param-value>
   </context-param>
-  
+
+  <!-- ********** shiro 权限验证 *********-->
+  <!--<filter>-->
+    <!--<filter-name>shiroFilter</filter-name>-->
+    <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+    <!--<init-param>-->
+      <!--<param-name>transformWsdlLocations</param-name>-->
+      <!--<param-value>true</param-value>-->
+    <!--</init-param>-->
+  <!--</filter>-->
+
+  <!--<filter-mapping>-->
+    <!--<filter-name>shiroFilter</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
+  <!--</filter-mapping>-->
+
+
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-  
+
   <!--加载springMVC-->
   <servlet>
     <servlet-name>springMVC</servlet-name>
@@ -25,9 +41,12 @@
       <param-value>classpath:springmvc.xml</param-value>
     </init-param>
   </servlet>
+
+
   <servlet-mapping>
     <servlet-name>springMVC</servlet-name>
     <url-pattern>*.action</url-pattern>
   </servlet-mapping>
-  
+
+
 </web-app>
